--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"ip":"Testing09.aternos.me",
-	"port": "25565",
-	"name": "afkbot"
+	"ip":"HeroxR7F.aternos.me",
+	"port": "51907",
+	"name": "NotOffToday"
 }
